kubernetes/apps/selfhosted/immich/app/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.bjw-s.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: immich-server
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: server
      app.kubernetes.io/instance: immich
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: network
            gateway.networking.k8s.io/gateway-name: envoy-internal
      toPorts:
        - ports:
            - port: "2283"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: observability
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "8081"
              protocol: TCP
            - port: "8082"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
  egress:
    - toEntities:
        - cluster
        - world

---
# yaml-language-server: $schema=https://k8s-schemas.bjw-s.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: immich-machine-learning
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: machine-learning
      app.kubernetes.io/instance: immich
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: selfhosted
            app.kubernetes.io/name: server
            app.kubernetes.io/instance: immich
      toPorts:
        - ports:
            - port: "3003"
              protocol: TCP

---
# yaml-language-server: $schema=https://k8s-schemas.bjw-s.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: immich-valkey
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: valkey
      app.kubernetes.io/instance: immich
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: selfhosted
            app.kubernetes.io/name: server
            app.kubernetes.io/instance: immich
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
